tests/single_instruction_translation_validation/mcsema/register-variants/pmulhrsw_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:209:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %20)
            ^
0.00user 0.01system 0:00.02elapsed 107%CPU (0avgtext+0avgdata 27444maxresident)k
0inputs+16outputs (0major+3250minor)pagefaults 0swaps
